--- a/app/index.html
+++ b/app/index.html
@@ -24,7 +24,7 @@
     <!-- Add your site or application content here -->
     <div class="container">
         <div class="header">
-            <ul class="nav nav-pills pull-right" data-ng-controller="UserCtrl as usr">
+            <ul class="nav nav-pills pull-right" data-ng-controller="UserController as usr">
                 <li data-data-ng-class="{active:usr.isActive('/main')}"><a data-ng-href="#">Home</a>
                 </li>
                 <li data-ng-class="{active:usr.isActive('/login')}"><a data-ng-href="#/login">Login</a>
@@ -119,6 +119,7 @@
     <script src="scripts/controllers/user.js"></script>
     <script src="scripts/controllers/list.js"></script>
     <script src="scripts/directives/wordscore.js"></script>
+    <script src="scripts/controllers/invites.js"></script>
     <!-- endbuild -->
 </body>
 
